--- a/css/schedule.css
+++ b/css/schedule.css
@@ -490,6 +490,10 @@ footer .inner .f-bottom .f-info-mo .text-box {
 }
 footer .inner .f-bottom .f-info-mo .text-box .text {
   margin-bottom: 6px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 6px 0;
 }
 footer .inner .f-bottom .f-info-mo .text-box .text span {
   color: #666;
