--- a/scss/page/_main.scss
+++ b/scss/page/_main.scss
@@ -1,5 +1,5 @@
 .visual-container {
-    margin:  137px auto 100px;
+    margin: 137px auto 100px;
     width: 100%;
 
     .img-wrapper {
@@ -40,7 +40,7 @@
                 width: 14px;
                 height: 14px;
                 background: rgba(255, 255, 255, 0.4);
-                border:2px solid transparent;
+                border: 2px solid transparent;
                 background-clip: padding-box;
                 border-radius: 50%;
                 cursor: pointer;
@@ -51,7 +51,7 @@
 
                 &.on {
                     background: transparent;
-                    border-color:$backgroundColor;
+                    border-color: $backgroundColor;
                 }
             }
 
@@ -315,29 +315,34 @@
             .schedule-table-wrapper {
                 display: flex;
                 margin-bottom: 100px;
-                .btn-box{
-                    position:relative;
-                    width:100%;
+
+                .btn-box {
+                    position: relative;
+                    width: 100%;
                     display: none;
-                    .tbody-prev{
-                        position:absolute;
-                        top:-6px;
-                        left:0;
-                        height:54px;
-                        background-image:linear-gradient(to right, $backgroundColor, transparent);
-                        z-index:1;
-                        .bx-chevron-left{
+
+                    .tbody-prev {
+                        position: absolute;
+                        top: -6px;
+                        left: 0;
+                        height: 54px;
+                        background-image: linear-gradient(to right, $backgroundColor, transparent);
+                        z-index: 1;
+
+                        .bx-chevron-left {
                             font-size: 34px;
                         }
                     }
-                    .tbody-next{
-                        position:absolute;
-                        top:-6px;
-                        right:0;
-                        height:54px;
-                        background-image:linear-gradient(to left, $backgroundColor, transparent);
-                        z-index:1;
-                        .bx-chevron-right{
+
+                    .tbody-next {
+                        position: absolute;
+                        top: -6px;
+                        right: 0;
+                        height: 54px;
+                        background-image: linear-gradient(to left, $backgroundColor, transparent);
+                        z-index: 1;
+
+                        .bx-chevron-right {
                             font-size: 34px;
                         }
 
@@ -401,7 +406,8 @@
                             }
 
                             tbody {
-                                position:relative;
+                                position: relative;
+
                                 tr {
                                     td {
                                         padding-top: 10px;
@@ -710,18 +716,19 @@
     .stadium-wrap {
         overflow: hidden;
         display: flex;
-        width:100%;
-        position:relative;
+        width: 100%;
+        position: relative;
         margin-bottom: 90px;
 
         .stadium-list {
             display: flex;
-            position:absolute;
-            top:0;
-            left:0;
+            position: absolute;
+            top: 0;
+            left: 0;
 
             li {
-                margin-right:60px;
+                margin-right: 60px;
+
                 a {
                     display: flex;
                     width: 320px;
@@ -856,12 +863,15 @@
 }
 
 //media query
-@media (max-width:1300px){
-    body,html{
+@media (max-width:1300px) {
+
+    body,
+    html {
         main {
 
             .visual-container {
-                margin-top:129px;
+                margin-top: 129px;
+
                 .img-wrapper {
                     height: 40vw;
 
@@ -981,12 +991,15 @@
     }
 }
 
-@media (max-width:1024px){
-    body,html{
+@media (max-width:1024px) {
+
+    body,
+    html {
         main {
-            .visual-container{
-                margin-top:61px;
+            .visual-container {
+                margin-top: 61px;
             }
+
             .ticket-container {
                 padding: 0 20px;
 
@@ -1101,12 +1114,15 @@
     }
 }
 
-@media (max-width:768px){
-    body,html{
+@media (max-width:768px) {
+
+    body,
+    html {
         main {
-            .visual-container{
-                margin-top:51px;
+            .visual-container {
+                margin-top: 51px;
             }
+
             .top-wrapper {
                 flex-wrap: wrap;
                 gap: 10px;
@@ -1191,9 +1207,10 @@
 
                     .schedule-bottom {
                         .schedule-table-wrapper {
-                            .btn-box{
+                            .btn-box {
                                 display: block;
                             }
+
                             .schedule-table {
                                 padding: 0;
                                 margin: 0;
@@ -1268,6 +1285,12 @@
                 }
             }
 
+            .event-container {
+                .event-mo {
+                    background-size:auto 100%;
+                }
+            }
+
             .team-container {
                 padding: 50px 30px;
 
@@ -1326,7 +1349,8 @@
                     .stadium-list {
 
                         li {
-                            margin-right:30px;
+                            margin-right: 30px;
+
                             a {
                                 width: 150px;
                                 height: 150px;
@@ -1382,11 +1406,12 @@
     body,
     html {
         main {
-            .visual-container{
-                .img-wrapper{
-                    height:60vw;
+            .visual-container {
+                .img-wrapper {
+                    height: 60vw;
                 }
             }
+
             .schedule-container {
                 .inner {
                     .schedule-bottom {
