--- a/scss/page/_main.scss
+++ b/scss/page/_main.scss
@@ -590,7 +590,7 @@
         display: none;
         width: 100%;
         height: 100px;
-        background: url(../../images/event_mo.png) no-repeat center center / 100%;
+        background: url(./../../images/event_mo.png) no-repeat center center / 100%;
         border-radius: 10px;
         overflow: hidden;
     }
