--- a/css/common.css
+++ b/css/common.css
@@ -1174,7 +1174,7 @@ aside .top-btn:hover .text {
   display: none;
   width: 100%;
   height: 100px;
-  background: url(./../../images/event_mo.png) no-repeat center center/100%;
+  background: url(../../images/event_mo.png) no-repeat center center/100%;
   border-radius: 10px;
   overflow: hidden;
 }
