--- a/css/common.css
+++ b/css/common.css
@@ -196,6 +196,7 @@ header .h-top-container .inner .h-top-right .btn-wrap .all-menu-btn {
 }
 header .h-top-container .inner .h-top-right .btn-wrap .all-menu-btn .bx-menu {
   font-size: 30px;
+  color: #222;
 }
 header .h-top-container .inner .h-top-right .btn-wrap .all-menu-close {
   display: none;
@@ -206,6 +207,7 @@ header .h-top-container .inner .h-top-right .btn-wrap .all-menu-close {
 }
 header .h-top-container .inner .h-top-right .btn-wrap .all-menu-close .bx-x {
   font-size: 30px;
+  color: #222;
 }
 header .h-top-container .all-menu-wrap {
   display: none;
@@ -216,6 +218,7 @@ header .h-top-container .all-menu-wrap {
   width: 100%;
   padding: 0px 30px;
   box-sizing: border-box;
+  overflow-y: auto;
 }
 header .h-top-container .all-menu-wrap .all-menu-top {
   display: flex;
