--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -126,7 +126,7 @@ header {
             right: 0;
             background: $backgroundColor;
             width: 100%;
-            height: calc(100vh - 61px);
+            min-height: calc(100vh - 61px);
             padding: 0px 30px;
             box-sizing: border-box;
             overflow-y: auto;
@@ -412,7 +412,7 @@ header {
                 }
 
                 .all-menu-wrap {
-                    height: calc(100vh - 51px);
+                    min-height: calc(100vh - 51px);
                     top:51px;
                     right:-100vw;
                 }
